# LapTimer

./: LICENSE  README.md
Clion/: CMakeLists.txt  main.cpp
LapTimer/: imgui.ini
